# Deep-Learning-Framework-Cpp

./: .gitignore  Base.h  BatchNormalization.h  CMakeLists.txt  Conv.h  Dataset.h  Dropout.h  Flatten.h  FullyConnected.h  Initializers.h  LICENSE  Loss.h  Model.h  Network.h  Optimizer.h  Pooling.h  README.md  Relu.h  Softmax.h  Trainer.h  example.cpp  run.txt
include/Activations/: Relu.hpp  Sigmoid.hpp  Softmax.h  Softmax.hpp
include/BaseLayer/: Layer.hpp
include/Datasets/: Dataset.hpp  ImgDataset.hpp
include/Initializers/: Constant.h  Constant.hpp  He.h  He.hpp  UniformRandom.h  UniformRandom.hpp  WeightInitializer.h  WeightInitializer.hpp  Xavier.h  Xavier.hpp
include/Layers/: BatchNormalization.hpp  Conv.h  Conv.hpp  Dropout.h  Dropout.hpp  Flatten.hpp  Linear.h  Linear.hpp  Pooling.hpp
include/Losses/: CrossEntropy.h  CrossEntropy.hpp  Loss.hpp
include/Model/: Model.h  Model.hpp
include/Optimizers/: Adam.h  Adam.hpp  Optimizer.h  Optimizer.hpp  SGD.h  SGD.hpp
include/Trainer/: Trainer.h  Trainer.hpp
src/Activations/: Relu.cpp  Sigmoid.cpp  Softmax.cpp
src/Datasets/: Dataset.cpp  ImgDataset.cpp
src/Initializers/: Constant.cpp  He.cpp  UniformRandom.cpp  Xavier.cpp
src/Layers/: BatchNormalization.cpp  Conv.cpp  Dropout.cpp  Flatten.cpp  Linear.cpp  Pooling.cpp
src/Losses/: CrossEntropy.cpp
src/Model/: Model.cpp
src/Optimizers/: Adam.cpp  SGD.cpp
src/Trainer/: Trainer.cpp
